# scriptures

./: .gitignore  PROJECT_CONTEXT.md  README.md
.github/workflows/: build.yml
data/bundles/: manifest.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: generate_icon.py  icon.icns
frontend/src-tauri/src/: ai.rs  bundles.rs  commands.rs  db.rs  main.rs  tts.rs
frontend/src/components/: AIAssistant.tsx  AssetManager.tsx  BookList.tsx  ChapterGrid.tsx  FirstRunSetup.tsx  HymnViewer.tsx  Icons.tsx  MyJourney.tsx  NoteEditor.tsx  ReadAloudControls.tsx  RelatedContent.tsx  SearchBar.tsx  SettingsPanel.tsx  StudyView.tsx  Toast.tsx  Tutorial.tsx  VerseDisplay.tsx  VerseToolbar.tsx  VolumeNav.tsx
frontend/src/data/: constants.ts
frontend/src/hooks/: useScriptures.ts
scripts/: build-hymns-db.py  build-scriptures-db.py  complete-content-v2.py  complete-content.py  complete-maccabees-v2.py  complete-maccabees.py  download-piper-models.sh  expand-scriptures-db.py  export-bundles.py  fix-database.py  fix-dss-content.py  fix-dss-final.py  fix-hymns-db.py  import-dss.py  import-hymns.py  import-scriptures.py  import-talks.py
scripts/verse_data/: 1esdras.json  1maccabees.json  2maccabees.json  letter_of_jeremiah.json
services/piper-tts/: piper-tts-server.spec  server.py
services/vibevoice-tts/: bundle.spec  server.py  vibevoice-tts.spec
ui/: ScripturesTab.tsx
(+2 files in other folders)
