[package]
name = "scriptures"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-shell = "2"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
